[#817] removed deprecated border on sidebar and fix small visual bug cropping the bottom of the desktop sidebar

--- a/src/components/Calendar/Calendar.styl
+++ b/src/components/Calendar/Calendar.styl
@@ -38,7 +38,6 @@
   margin-left 25%
 
 .sidebar
-  border-right 2px solid #f3f4f6
   width 270px
   height 100%
   flex-direction column
